# nara

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  fly.toml  pyproject.toml  pythonanywhere_wsgi.py  render.yaml  requirements.txt  set_password.py
data/: nara.db.corrupted  settings.json
data/vectordb/: chroma.sqlite3
docs/: policy_analysis_plan.md
scripts/: collect_policies.py  run_nlp.py
src/: __init__.py  config.py  main.py  scheduler.py
src/analyzers/: __init__.py  bid_rate_optimizer.py  bid_simulator.py  biz_matcher.py  competitor_analyzer.py  keyword_filter.py  llm_analyzer.py  org_policy_analyzer.py  proposal_strategy.py  regional_trend_analyzer.py  rfp_differ.py  strategy_engine.py  vector_store.py
src/api/: __init__.py  app.py  app_state.py  utils.py
src/collectors/: __init__.py  award_collector.py  base_collector.py  bid_collector.py  culture_collector.py  document_parser.py  news_collector.py  universal_collector.py
src/models/: __init__.py  database.py  schemas.py
src/parsers/: __init__.py  business_doc_parser.py  hwp_parser.py  pdf_parser.py
src/reporters/: __init__.py  cli_reporter.py  email_reporter.py  slack_reporter.py
src/utils/: __init__.py  converters.py  exceptions.py  formatters.py  logging_config.py  nlp.py
static/: index.html
static/css/: premium.css  style.css
tests/: conftest.py  test_admin_and_ai.py  test_bid_collector.py  test_bid_simulator.py  test_config.py  test_converters.py  test_database.py  test_formatters.py  test_nlp.py  test_organization.py  test_schemas.py
(+16 files in other folders)
