[project]
name = "nara-analyzer"
version = "1.2.0"
description = "나라장터 용역 자동 분석 및 입찰 전략 수립 시스템"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.0",
    "python-dotenv>=1.2.0",
    "rich>=13.9.0",
    "olefile>=0.47",
    "pdfplumber>=0.11.0",
    "openai>=2.38.0",
    "google-genai>=2.7.0",
    "jinja2>=3.1.0",
    "schedule>=1.2.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.48.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "aiohttp>=3.13.0",
    "starlette>=1.2.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nara = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
